--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -22,6 +22,7 @@ python-jose = "^3.3.0"
 python-multipart = "^0.0.5"
 email-validator = "^1.2.1"
 bcrypt = "^3.2.2"
+python-docx = "^0.8.11"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
