--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -43,7 +43,7 @@ http {
             proxy_set_header Host $host;
             proxy_redirect off;
         }
-        location /api/ {
+        location /api/v1/ {
             proxy_pass http://localhost/api/v1/;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header Host $host;
