--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -19,6 +19,10 @@ http {
         listen 80;
         listen [::]:80 default_server;
 
+        proxy_read_timeout 600;
+        proxy_connect_timeout 600;
+        proxy_send_timeout 600; 
+
         error_page 404 =200 /index.html;
 
         location /favicon.ico {
